--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ img{
 
 h3{
 	padding: 10px;
+	padding-top: 20px;
 }
 
 .footer{
@@ -48,6 +49,12 @@ a:active {
 	padding-bottom: 5%;
 }
 
+.paddingDiv2{
+	padding-left:5%;
+	padding-right:5%;
+	padding-bottom: 2%;
+}
+
 .bg-dark{
 	background-color: #356fbc !important;
 }
@@ -56,10 +63,26 @@ a:active {
 	height:350px;
 }
 
+.foto{
+	padding: 0px;
+	border-radius: 50%;
+	width: 200px;
+	height: 200px;
+}
+
 @media only screen and (max-width: 769px) {
 	img{
 		width: 80%;
 		padding-bottom: 20px;
+	}
+	.paddinfTop{
+		padding-top: 20px;
+	}
+	.rl{
+		text-align: left !important;
+	}
+	.contato{
+		font-size: 0.9rem;
 	}
 }
 
@@ -78,5 +101,15 @@ a:active {
 	}
 	.w-100{
 		height:200px;
+	}
+	.foto{
+		width: 150px;
+		height: 150px;
+	}
+	.divFoto{
+		padding-bottom: 20px;
+	}
+	.paddingDiv2{
+		padding-bottom: 5%;
 	}
 }
